Final adjustments to layout and translations

--- a/src/apps/jinja2/apps/gff.html
+++ b/src/apps/jinja2/apps/gff.html
@@ -82,11 +82,7 @@
     <div id="about" class="pad-section">
         <div class="container">
             <div class="row">
-                <div id="example-questions-wrapper" class="col-sm-6">
-                    <img src="{{ app.get_app_static('images/good-fashion-friend.jpg') }}" alt="{% trans %}In this manual we explain how a fast fashion addiction works, how you can change your habits and what you can do to become the prowd owner of a sustainable closet.{% endtrans %}" />
-                    <p><em>{% trans %}In this manual we explain how a fast fashion addiction works, how you can change your habits and what you can do to become the prowd owner of a sustainable closet.{% endtrans %}</em></p>
-                </div>
-                <div class="col-sm-6 text-center">
+                <div class="col-sm-6 col-sm-offset-3 text-center">
                     <h2>{% trans %}A manual for addicts to break with fast fashion{% endtrans %}</h2>
                     <p class="lead">
                         {% trans %}In this manual we explain how a fast fashion addiction works, how you can change your habits and what you can do to become the prowd owner of a sustainable closet.{% endtrans %}
@@ -95,7 +91,7 @@
                         <br/><br/>
                         {% trans %}The 12 step plan to recovery are attainable for every fast fashion junkie{% endtrans %}
                         <br/><br/>
-                        {% trans %}Download the e-book here and leave your comments at our social accounts{% endtrans %}
+                        {% trans %}Download the e-book here and leave your comments at <a href="#contact">our social accounts</a>{% endtrans %}
                     </p>
                     <div class="form-group form-submit text-center">
 
@@ -160,14 +156,14 @@
                             <h2 class="panel-title">Good Fashion Friend</h2>
                         </div>
                         <div class="panel-body lead">
-                            {% trans %}We are Gaspard, Fako and Fransje and we have founded the online platform and app Good Fashion Friend in 2020. GFF helps local vintage shops in Rotterdam to thrive in an increasingly digital world. Our handbook is the closure of the is project with which we share our attained knowledge with you.{% endtrans %}
+                            {% trans %}We are Gaspard, Fako and Fransje and we have founded the online platform and app Good Fashion Friend in 2020. GFF helps local vintage shops in Rotterdam to thrive in an increasingly digital world. Our handbook is the closure of the project with which we share our attained knowledge with you.{% endtrans %}
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h2 class="panel-title">{% trans %}Testimonials{% endtrans %}</h2>
+                            <h2 class="panel-title">{% trans %}Reviews{% endtrans %}</h2>
                         </div>
                         <div class="panel-body lead">
                             {% trans %}Milica – our fan of the first hour{% endtrans %}<br/>
