--- a/src/apps/jinja2/apps/gff.html
+++ b/src/apps/jinja2/apps/gff.html
@@ -95,7 +95,7 @@
                     </p>
                     <div class="form-group form-submit text-center">
 
-                        <a class="btn btn-primary" target="_blank" href="{{ app.get_app_static('handbook.pdf') }}">
+                        <a class="btn btn-primary" target="_blank" href="{{ app.get_app_static('handboek.pdf') }}">
                             {% trans %}Download{% endtrans %}
                         </a>
 
