Some corrections on og tags

--- a/src/apps/jinja2/apps/discourse-scope.html
+++ b/src/apps/jinja2/apps/discourse-scope.html
@@ -6,6 +6,14 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href={{ app.get_app_static('favicon.ico') }}>
     <title>Loading ...</title>
+
+    <meta property="og:title" content="{{ app.title }}"/>
+    <meta property="og:description" content="{{ app.description }}"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="{{ app.build_absolute_uri() }}"/>
+    <meta property="og:image" content="{{ app.static_image_absolute_uri() }}">
+    <meta property="og:locale" content="{{ app.locale }}"/>
+
     <style>/* weird hack, these styles are not accepted within a style block of a component */
         textarea,
         input.text,
