--- a/src/apps/jinja2/apps/gff.html
+++ b/src/apps/jinja2/apps/gff.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="{{ app.title }}"/>
     <meta property="og:description" content="{{ app.description }}"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="{{ app.build_absolute_uri() }}}"/>
+    <meta property="og:url" content="{{ app.build_absolute_uri() }}"/>
     <meta property="og:image" content="{{ app.static_image_absolute_uri() }}">
     <meta property="og:locale" content="{{ app.locale }}"/>
     {% for locale, link in language_links %}
