Updates color scheme of discourse scope promo

--- a/src/apps/jinja2/apps/discourse-scope-promo.html
+++ b/src/apps/jinja2/apps/discourse-scope-promo.html
@@ -98,7 +98,7 @@
                 </div>
                 <div class="col-sm-6 text-center">
                     <h2>Online Meningen In Een Overzicht</h2>
-                    <p class="lead">
+                    <p>
                         De Debat Kijker visualiseert maatschappelijke debatten overzichtelijk.
                         Zodat je snel een beeld krijgt van verschillende standpunten, die online opgeschreven zijn.
                         Ook de ongebruikelijke meningen zijn in het overzicht opgenomen!
@@ -106,7 +106,7 @@
                     </p>
                     <p><a href="#order" class="btn btn-primary">Bestel nu</a></p>
                     <h2 class="pad-header">Zelf Aan De Slag</h2>
-                    <p class="lead">
+                    <p>
                         De meningen in een maatschappelijk debat liggen vaak ver uit elkaar.
                         Niet alleen qua inhoud!
                         Je zult flink moeten zoeken binnen allerlei bronnen om alle standpunten op een rij te krijgen.
@@ -164,7 +164,7 @@
                         <div class="panel-heading">
                             <h2 class="panel-title">Hoe werkt het?</h2>
                         </div>
-                        <div class="panel-body lead">
+                        <div class="panel-body">
                             De software van De Debat Kijker doet honderden Google searches naar relevante kernwoorden.
                             Daar komen tien duizenden resultaten uit die je met de software vervolgens kunt filteren.
                             Websites met met relatief veel argumenten in de tekst komen bovenaan te staan.
@@ -178,7 +178,7 @@
                         <div class="panel-heading">
                             <h2 class="panel-title">Met steun van het SIDN Fonds</h2>
                         </div>
-                        <div class="panel-body lead">
+                        <div class="panel-body">
                             De Debat Kijker is mede mogelijk gemaakt door het <a href="https://www.sidnfonds.nl/projecten/de-debat-kijker">SIDN Fonds</a>.
                             De eerste visualisaties zijn via hen tot stand gekomen en zijn gratis beschikbaar.
                             Daarnaast is de software open source beschikbaar en zal een installatie daarvan minimaal 1 jaar gehost worden door ons.
@@ -265,7 +265,7 @@
     <!-- footer -->
     <footer>
         <div class="container">
-            <p class="text-right">Copyright &copy; Data Scope Search 2018, Fako Berkers</p>
+            <p class="text-right">Copyright &copy; Data Scope Search {{ datetime.now().strftime("%Y") }}, Fako Berkers</p>
         </div>
     </footer>
     <!-- /footer -->
