--- a/src/apps/jinja2/apps/datascope.html
+++ b/src/apps/jinja2/apps/datascope.html
@@ -179,21 +179,22 @@
 
     <script src="{{ app.get_app_static('scripts/jquery.min.js') }}"></script>
     <script src="{{ app.get_app_static('scripts/bootstrap.min.js') }}"></script>
-    <!-- Google Analytics -->
+    <!-- Google tag (gtag.js) -->
+    {% if app.tracker %}
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ app.tracker }}"></script>
+    {% endif %}
     <script>
         var hasTracker = {% if app.tracker %}true{% else %}false{% endif %};
         if(window.location.hostname !== 'localhost' && hasTracker) {
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-            ga('create', '{{ app.tracker }}', 'auto');
-            ga('send', 'pageview');
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+            gtag('config', '{{ app.tracker }}');
         } else {
-            ga = function() {}
+            gtag = function() {}
         }
     </script>
-    <!-- End Google Analytics -->
+    <!-- End Google tag -->
     <script src="{{ app.get_app_static('scripts/main.js') }}"></script>
 
 </body>
