--- a/src/apps/jinja2/apps/datascope.html
+++ b/src/apps/jinja2/apps/datascope.html
@@ -160,8 +160,8 @@
                     </h4>
                     <div class="social col-sm-12 text-center">
                         <p><a href="mailto:fuckoffATfakoberkersDOTnl" onclick="this.href=this.href.replace(/AT/,'&#64;').replace(/DOT/,'&#46;').replace(/fuckoff/,'email')"><i class="fa fa-envelope-square fa-4x"></i></a></p>
-                        <p><a href="https://www.linkedin.com/pub/fako-berkers/13/229/642"><i class="fa fa-linkedin-square fa-4x"></i></a></p>
-                        <p><a href="https://github.com/fako/datascope"><i class="fa fa-github-square fa-4x"></i></a></p>
+                        <p><a href="https://www.linkedin.com/pub/fako-berkers/13/229/642" target="_blank"><i class="fa fa-linkedin-square fa-4x"></i></a></p>
+                        <p><a href="https://github.com/fako/datascope" target="_blank"><i class="fa fa-github-square fa-4x"></i></a></p>
                     </div>
                 </div>
             </div>
