--- a/src/apps/jinja2/apps/discourse-scope.html
+++ b/src/apps/jinja2/apps/discourse-scope.html
@@ -50,25 +50,24 @@
         try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
         catch(e){window.attachEvent("onload", $buo_f)}
     </script>
+    <!-- Google tag (gtag.js) -->
+    {% if app.tracker %}
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ app.tracker }}"></script>
+    {% endif %}
     <script>
         var hasTracker = {% if app.tracker %}true{% else %}false{% endif %};
         if(window.location.hostname !== 'localhost' && hasTracker) {
-            (function (i, s, o, g, r, a, m) {
-                i['GoogleAnalyticsObject'] = r;
-                i[r] = i[r] || function () {
-                    (i[r].q = i[r].q || []).push(arguments)
-                }, i[r].l = 1 * new Date();
-                a = s.createElement(o),
-                    m = s.getElementsByTagName(o)[0];
-                a.async = 1;
-                a.src = g;
-                m.parentNode.insertBefore(a, m)
-            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-            ga('create', '{{ app.tracker }}', 'auto');
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+            gtag('config', '{{ app.tracker }}');
         } else {
-            ga = function() {}
+            gtag = function() {}
         }
+        // Add backward compatability for legacy Google Analytics that builds still use
+        ga = function() {}
     </script>
+    <!-- End Google tag -->
 
     {{ render_bundle('chunk-vendors', 'js', config=BUNDLE) }}
     {{ render_bundle('app', 'js', config=BUNDLE) }}
