Removes AI brainstorm event banner

--- a/src/apps/jinja2/apps/ai-brainstorm.html
+++ b/src/apps/jinja2/apps/ai-brainstorm.html
@@ -46,9 +46,9 @@
 
     <!-- first section - Home -->
     <div id="home" class="home">
-        <div class="top-left-box">
-            <h3>Event: 31 mei, 20:00 tot 22:00 in <a href="https://www.google.nl/maps/place/Nautilus+Hall/@52.3708941,4.9654532,16z/data=!3m1!4b1!4m6!3m5!1s0x47c609317cfbc72f:0xeed533e651b8e6ad!8m2!3d52.3708909!4d4.9680281!16s%2Fg%2F11c2lfd8kk?entry=ttu">Nautilus</a> (drankje vanaf 19:30)</h3>
-        </div>
+{#        <div class="top-left-box">#}
+{#            <h3>Event: 31 mei, 20:00 tot 22:00 in <a href="https://www.google.nl/maps/place/Nautilus+Hall/@52.3708941,4.9654532,16z/data=!3m1!4b1!4m6!3m5!1s0x47c609317cfbc72f:0xeed533e651b8e6ad!8m2!3d52.3708909!4d4.9680281!16s%2Fg%2F11c2lfd8kk?entry=ttu">Nautilus</a> (drankje vanaf 19:30)</h3>#}
+{#        </div>#}
         <div class="center-box text-vcenter">
             <h1>AI Brainstorm</h1>
             <h3>samen de beste toepassingen van AI bedenken</h3>
